--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/akpsiLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AKPsi UCI</title>
+    <title>Alpha Kappa Psi - UCI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
