changing public url to static file

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/akpsiLogo.png" />
+    <link rel="icon" href="./akpsiLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Alpha Kappa Psi - Pi Psi Chapter"
       content="The official website for the UCI Chapter of Professional Business Fraternity - Alpha Kappa Psi"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/akpsiLogo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./akpsiLogo.png" />
+    <link rel="manifest" href="./manifest.json" />
     <title>Alpha Kappa Psi - UCI</title>
   </head>
   <body>
